--- a/Twitter/Base.lproj/Main.storyboard
+++ b/Twitter/Base.lproj/Main.storyboard
@@ -58,14 +58,14 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="tweetCell" rowHeight="120" id="u0W-xB-wTE" customClass="TweetCellTableViewCell" customModule="Twitter" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="28" width="414" height="120"/>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="tweetCell" rowHeight="150" id="u0W-xB-wTE" customClass="TweetCellTableViewCell" customModule="Twitter" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="28" width="414" height="150"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="u0W-xB-wTE" id="6bd-HW-mNB">
-                                    <rect key="frame" x="0.0" y="0.0" width="414" height="119.5"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="414" height="149.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="osv-SF-vZe">
+                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="osv-SF-vZe">
                                             <rect key="frame" x="20" y="11" width="65" height="65"/>
                                             <constraints>
                                                 <constraint firstAttribute="height" constant="65" id="Kid-xs-6lI"/>
@@ -73,31 +73,68 @@
                                             </constraints>
                                         </imageView>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" text="John Doe" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ORX-sL-iHK">
-                                            <rect key="frame" x="93" y="11" width="69" height="18"/>
-                                            <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
-                                            <nil key="textColor"/>
+                                            <rect key="frame" x="93" y="11" width="60.5" height="16"/>
+                                            <fontDescription key="fontDescription" type="boldSystem" pointSize="13"/>
+                                            <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="This is my tweet." textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wIc-Uu-RKf">
-                                            <rect key="frame" x="93" y="33" width="301" height="76"/>
+                                            <rect key="frame" x="93" y="31" width="301" height="58"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
+                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="N0G-dl-ejb" userLabel="favButton">
+                                            <rect key="frame" x="354" y="99" width="30" height="30"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" constant="30" id="boE-Io-pn2"/>
+                                                <constraint firstAttribute="height" constant="30" id="w0y-gd-y7s"/>
+                                            </constraints>
+                                            <state key="normal" image="favor-icon"/>
+                                            <connections>
+                                                <action selector="favoriteTweet:" destination="u0W-xB-wTE" eventType="touchUpInside" id="K9u-6M-fXY"/>
+                                            </connections>
+                                        </button>
+                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Rsa-D5-Qfd" userLabel="retweetButton">
+                                            <rect key="frame" x="314" y="99" width="30" height="30"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="30" id="RP0-He-NjX"/>
+                                                <constraint firstAttribute="width" constant="30" id="qmA-o9-TVu"/>
+                                            </constraints>
+                                            <state key="normal" image="retweet-icon"/>
+                                            <connections>
+                                                <action selector="retweet:" destination="u0W-xB-wTE" eventType="touchUpInside" id="dAN-dt-Rr6"/>
+                                            </connections>
+                                        </button>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="time lable" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="meu-vC-767">
+                                            <rect key="frame" x="357" y="11" width="47" height="12"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="10"/>
+                                            <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
                                     </subviews>
                                     <constraints>
-                                        <constraint firstItem="wIc-Uu-RKf" firstAttribute="bottom" secondItem="6bd-HW-mNB" secondAttribute="bottomMargin" id="4QE-uL-vTn"/>
+                                        <constraint firstItem="Rsa-D5-Qfd" firstAttribute="top" secondItem="wIc-Uu-RKf" secondAttribute="bottom" constant="10" id="6gP-SK-Pes"/>
+                                        <constraint firstAttribute="trailing" secondItem="meu-vC-767" secondAttribute="trailing" constant="10" id="CGI-Dm-L0z"/>
+                                        <constraint firstAttribute="trailingMargin" secondItem="N0G-dl-ejb" secondAttribute="trailing" constant="10" id="Jmb-To-4Vi"/>
+                                        <constraint firstItem="N0G-dl-ejb" firstAttribute="leading" secondItem="Rsa-D5-Qfd" secondAttribute="trailing" constant="10" id="OdL-zB-4qy"/>
                                         <constraint firstItem="ORX-sL-iHK" firstAttribute="leading" secondItem="osv-SF-vZe" secondAttribute="trailing" constant="8" id="TxD-Ov-7a1"/>
+                                        <constraint firstAttribute="bottomMargin" secondItem="N0G-dl-ejb" secondAttribute="bottom" constant="10" id="UIM-V0-Fok"/>
                                         <constraint firstItem="wIc-Uu-RKf" firstAttribute="trailing" secondItem="6bd-HW-mNB" secondAttribute="trailingMargin" id="ZHb-CL-rrp"/>
+                                        <constraint firstItem="meu-vC-767" firstAttribute="top" secondItem="ORX-sL-iHK" secondAttribute="top" id="aVF-C6-SWy"/>
                                         <constraint firstItem="osv-SF-vZe" firstAttribute="top" secondItem="6bd-HW-mNB" secondAttribute="topMargin" id="c2G-1a-sdq"/>
                                         <constraint firstItem="osv-SF-vZe" firstAttribute="leading" secondItem="6bd-HW-mNB" secondAttribute="leadingMargin" id="cKP-wk-TkI"/>
                                         <constraint firstItem="wIc-Uu-RKf" firstAttribute="top" secondItem="ORX-sL-iHK" secondAttribute="bottom" constant="4" id="cOz-lu-vJ9"/>
                                         <constraint firstItem="ORX-sL-iHK" firstAttribute="top" secondItem="6bd-HW-mNB" secondAttribute="topMargin" id="e5D-pF-H7y"/>
                                         <constraint firstItem="wIc-Uu-RKf" firstAttribute="leading" secondItem="osv-SF-vZe" secondAttribute="trailing" constant="8" id="gVG-le-Wd3"/>
+                                        <constraint firstItem="N0G-dl-ejb" firstAttribute="top" secondItem="wIc-Uu-RKf" secondAttribute="bottom" constant="10" id="q5A-uY-WFY"/>
                                     </constraints>
                                 </tableViewCellContentView>
                                 <connections>
+                                    <outlet property="favButton" destination="N0G-dl-ejb" id="b5x-na-fXZ"/>
                                     <outlet property="profileImageView" destination="osv-SF-vZe" id="KHK-yM-Avg"/>
+                                    <outlet property="retweetButton" destination="Rsa-D5-Qfd" id="fXN-e7-56a"/>
+                                    <outlet property="timeLable" destination="meu-vC-767" id="XL4-Aq-D4x"/>
                                     <outlet property="tweetContent" destination="wIc-Uu-RKf" id="t8a-ka-Kw8"/>
                                     <outlet property="userNameLable" destination="ORX-sL-iHK" id="vcy-Mj-3sS"/>
                                 </connections>
@@ -215,4 +252,8 @@
             <point key="canvasLocation" x="2808.6956521739135" y="-11.383928571428571"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="favor-icon" width="30" height="30"/>
+        <image name="retweet-icon" width="30" height="30"/>
+    </resources>
 </document>
